--- a/physical-ai-textbook/package.json
+++ b/physical-ai-textbook/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
+    "start:frontend": "docusaurus start",
+    "start:backend": "cd backend && python3 -m uvicorn src.main:app --reload",
+    "dev": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
@@ -15,9 +18,11 @@
   },
   "dependencies": {
     "@docusaurus/core": "^3.1.0",
+    "@docusaurus/plugin-client-redirects": "^3.9.2",
     "@docusaurus/preset-classic": "^3.1.0",
     "@mdx-js/react": "^3.0.0",
     "@theme-ui/prism": "^0.17.2",
+    "better-auth": "^1.4.7",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.4.1",
     "prismjs": "^1.30.0",
@@ -27,7 +32,8 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.1.0",
     "@docusaurus/tsconfig": "^3.1.0",
-    "@docusaurus/types": "^3.1.0"
+    "@docusaurus/types": "^3.1.0",
+    "concurrently": "^9.2.1"
   },
   "browserslist": {
     "production": [
