--- a/physical-ai-textbook/backend/requirements.txt
+++ b/physical-ai-textbook/backend/requirements.txt
@@ -1,7 +1,5 @@
 fastapi==0.104.1
 uvicorn==0.24.0
-sentence-transformers==3.4.0
-qdrant-client==1.6.2
 python-dotenv==1.0.0
 openai==1.3.7
 google-generativeai==0.8.4
@@ -12,3 +10,4 @@ bcrypt==4.0.1
 python-jose[cryptography]==3.3.0
 sqlalchemy==2.0.23
 asyncpg==0.29.0
+slowapi==0.1.9
