--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
-fastapi
-uvicorn
-pydantic
-numpy
+fastapi==0.128.0
+uvicorn==0.40.0
+pydantic==2.12.5
+numpy==1.26.4
 scikit-learn==1.4.2
 sentence-transformers
 qdrant-client
